fix: photo placement on mobile

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -704,9 +704,11 @@ section {
     }
 
     .hero-content {
-        grid-template-columns: 1fr;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column-reverse;
         text-align: center;
-        gap: 2rem;
+        gap: 4rem;
     }
 
     .hero-text h1 {
